# shrinkwrap

./: CMakeLists.txt
CMake/: FindZstd.cmake
include/: CMakeLists.txt
include/shrinkwrap/: gz.hpp  xz.hpp  zstd.hpp
